# c-webserver

./: .gitignore  CMakeLists.txt  DOCKERFILE  Makefile  README.md  Taskfile.yml  docker-compose.yml
.github/workflows/: compile-check.yml
src/: errorhandler.c  errorhandler.h  logging.c  logging.h  main.c  reqhandler.c  reqhandler.h  socket.c  socket.h  structs.h  syscall.c  syscall.h
src/err/: errorhandler.c  errorhandler.h
src/fs/: io.c  io.h
src/http/: reqhandler.c
src/http/socket/: socket.c
src/log/: logging.h
test/: test-client.c
util/: compile.sh
